--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -34,11 +34,17 @@
           <%= link_to '投稿一覧ページへ', posts_path, class: "btn btn-dark" %>
         </div>
 
-        <div class="justify-content-between ml-1">
-          <% @post.post_images.each do |image| %>
-          <%= attachment_image_tag image, :image, format: 'jpeg', size: '190x133' %>
-          <% end %>
-        </div>
+          <div class="main-slider mb-3">
+            <% @post.post_images.each do |image| %>
+            <%= attachment_image_tag image, :image, format: 'jpeg', size: '300x300' %>
+            <% end %>
+          </div>
+
+          <div class="thumbnail-slider">
+            <% @post.post_images.each do |image| %>
+            <%= attachment_image_tag image, :image, format: 'jpeg', size: '100x100', class: 'thumbnail mr-1' %>
+            <% end %>
+          </div>
 
         <div id="favorite_btn_<%= @post.id %>">
           <%= render 'favorites/favorite', post: @post %>
@@ -103,5 +109,4 @@
   </div>
 </div>
 
-<script src="/assets/googlemap.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API'] %>&callback=initMap"></script>
