--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,24 @@
 <%= stylesheet_link_tag "signup", :media => "all" %>
 
 <div class="login-form">
-
-<h2>新規登録</h2>
-
+  <h2>新規登録</h2>
   <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+  <%= f.text_field :name, class: "login-username", autofocus: true, autocomplete: "name", placeholder: "名前" %>
+  <%= f.text_field :email, class:"login-email", autofocus: true, autocomplete: "email", placeholder: "Eﾒｰﾙ" %>
+  <%= f.text_field :password, class: "login-password", autofocus: true, autocomplete: "new-password", placeholder: "ﾊﾟｽﾜｰﾄﾞ(6文字以上)" %>
+  <%= f.text_field :password_confirmation, class: "login-password", autofocus: true, autocomplete: "new-password", placeholder: "ﾊﾟｽﾜｰﾄﾞ（確認用）" %>
+  <%= f.submit "新規登録", class: "login-submit"%>
+  <% end %>
 
-    <%= f.text_field :name, class: "login-username", autofocus: true, autocomplete: "name", placeholder: "名前" %>
+  <div class="box-newusr justify-content-center">
+    <p class="mb-0">↓登録済みの方はこちら↓</p>
+    <%= link_to "ログイン", new_user_session_path %>
+  </div>
 
-    <%= f.text_field :email, class:"login-email", autofocus: true, autocomplete: "email", placeholder: "Eﾒｰﾙ" %>
-
-    <%= f.text_field :password, class: "login-password", autofocus: true, autocomplete: "new-password", placeholder: "ﾊﾟｽﾜｰﾄﾞ(6文字以上)" %>
-
-    <%= f.text_field :password_confirmation, class: "login-password", autofocus: true, autocomplete: "new-password", placeholder: "ﾊﾟｽﾜｰﾄﾞ（確認用）" %>
-
-    <%= f.submit "新規登録", class: "login-submit"%>
-
-    <div class="box-newusr">
-      <p>↓登録済みの方はこちら↓</p>
-      <%= link_to "ログイン", new_user_session_path %>
-    </div>
-
-<% end %>
+  <%= link_to "トップページに戻る", root_path %>
 
 </div>
 
-
 <div class="underlay-photo"></div>
-<div class="underlay-black"></div> 
+<div class="underlay-black"></div>
