--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -33,7 +33,7 @@
         <%= f.attachment_field :post_images_images, multiple: true %>
       </div>
       <%= f.submit '保存する', class: "btn btn-success" %><br>
-      <%= link_to '投稿詳細ページへ', post_path(@post), class: "btn btn-dark mt-3" %>
+      <%= link_to '投稿詳細ページへ', post_path(@post), class: "btn btn-dark mt-3 mb-3" %>
       <% end %>
     </div>
   </div>
