--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -31,7 +31,7 @@
           <label class="form-label">画像</label><br>
           <%= f.attachment_field :post_images_images, multiple: true, class: "post-image" %>
         </div>
-        <%= f.submit '投稿する', class: "btn btn-success" %>
+        <%= f.submit '投稿する', class: "btn btn-success mb-3" %>
       <% end %>
     </div>
   </div>
