--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
     </div>
 
     <% if @comment.errors.any? %>
-    <div class="card text-center card text-white bg-danger mb-3">
+    <div class="card text-center card text-white mb-3">
       <%= @comment.errors.count %>件のエラーが発生しました
       <% @comment.errors.full_messages.each do |message| %>
       <%= message %>
