--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -26,7 +26,7 @@
         <label class="form-label">プロフィール</label>
         <%= f.text_field :profile, class: "form-control" %><br>
       </div>
-      <%= f.submit '保存する', class: "btn btn-success" %>
+      <%= f.submit '保存する', class: "btn btn-success mb-3" %>
       <% end %>
     </div>
   </div>
