update:周辺の宿泊施設の情報を取得できるように修正

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -105,6 +105,10 @@
 </div>
 
 <script>
+  // document.addEventListener('DOMContentLoaded', function () {
+  //   document.body.setAttribute('data-turbolinks', 'false');
+  // });
+
   let map;
   let service;
   let geocoder;
