--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -451,9 +451,9 @@
   }
 </script>
 
-<script async
+<%# <script async
   src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API'] %>&libraries=places&callback=initMap">
-</script>
+</script> %>
 
 <script>
   $(document).ready(function () {
