update:ルート検索結果の背景色変更

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -100,9 +100,11 @@ a:hover {
   max-height: 400px;
   overflow-x: hidden;
   overflow-y: auto;
-  border: 1px solid #ccc;
   padding: 10px;
   word-wrap: break-word;
+}
+
+.directions-panel-bg {
   background-color: white;
 }
 
