--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,9 +1,9 @@
 <% if current_user && @post.favorited_by?(current_user) %>
   <%= link_to post_favorites_path(post), method: :delete, remote: true, class: "favorite_btn" do %>
-  ♥<%= post.favorites.count %> いいね
+  ♥<%= post.favorites.size %> いいね
   <% end %>
 <% else %>
   <%= link_to post_favorites_path(post), method: :post, remote: true, class: "favorite_btn" do %>
-  ♡<%= @post.favorites.count %> いいね
+  ♡<%= @post.favorites.size %> いいね
   <% end %>
 <% end %>
